clusters/home/apps/stirlingpdf/stirlingpdf/configs/stirlingpdf-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: stirlingpdf-ingressroute
  namespace: stirlingpdf
  annotations:
    cert-manager.io/cluster-issuer: cloudflare-clusterissuer
    gethomepage.dev/href: "https://stirlingpdf.homelab.rivetcode.com"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/description: StirlingPDF
    gethomepage.dev/group: Productivity
    gethomepage.dev/icon: mdi-file-pdf-box
    gethomepage.dev/app: stirlingPDF # optional, may be needed if app.kubernetes.io/name != ingress metadata.name
    gethomepage.dev/name: StirlingPDF
    #gethomepage.dev/widget.type: "stirlingpdf"
    #gethomepage.dev/widget.url: "https://stirlingpdf.homelab.rivetcode.com"
    gethomepage.dev/pod-selector: ""
spec:
  entryPoints:
    - websecure
  routes:
  - match: Host(`stirlingpdf.homelab.rivetcode.com`)
    kind: Rule
    services:
    - name: stirlingpdf-stirling-pdf-chart
      port: 8080
    middlewares:
      - name: authentik-service-middleware
        namespace: authentik
  tls:
    secretName: stirlingpdf-certificate-secret
